updated pricing and fixed typos

--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Customized nutrition program</li>
                                 <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Personalized excercise program</li>
+                                <li><i class="fa  fa-arrow-circle-right"></i> Personalized exercise program</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Daily accountability checklist</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Diet log</li>
                                 <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassissment</li>
+                                <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassessment</li>
                             </ul>
                         </div>
                         <div class="col-md-3">
@@ -237,8 +237,8 @@
                                     <br>
                                     <ul class="text-white">
                                         <li><i class="fas  fa-angle-right"></i> 12 Months: $150/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $175/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $200/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $200/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $225/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
                                         <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
@@ -296,9 +296,9 @@
                                     <h2 class="text-uppercase text-white">Pricing</h2>
                                     <br>
                                     <ul class="text-white">
-                                        <li><i class="fas  fa-angle-right"></i> 12 Months: $225/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $260/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $300/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 12 Months: $250/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $315/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $350/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
                                         <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
@@ -354,7 +354,7 @@
                                     <br>
                                     <ul class="text-white">
                                         <li><i class="fas  fa-angle-right"></i> 12 Months: $175/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $210/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $220/month</li>
                                         <li><i class="fas  fa-angle-right"></i> 3 Months: $250/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
@@ -404,7 +404,7 @@
                                     <h2 class="text-uppercase text-white">Pricing</h2>
                                     <br>
                                     <ul class="text-white">
-                                        <li><i class="fas  fa-angle-right"></i> Month to Month: $100/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> Month to Month: $150/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
                                         <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
@@ -424,7 +424,7 @@
                     <div class="main_business">
                         <div class="col-md-5">
                             <div class="business_item sm-m-top-50">
-                                <h2 class="text-uppercase text-white">Consultation</h2>
+                                <h2 class="text-uppercase text-white">Private Coaching Session</h2>
                                 <p class="m-top-20 text-white">During the initial consultation coaches will review the
                                     diet and lifestyle questionnaires, align clients to their dreams and goals, and work
                                     together to create a plan of action. Consultations are also available for
@@ -435,9 +435,6 @@
                         </div>
                         <div class="col-md-4">
                             <ul class="text-white">
-                                <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Breakdown of diet and lifestyle
-                                    questionnaires</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Personalized diet recommendations</li>
                                 <br>
@@ -697,7 +694,7 @@
                                                     strength athlete, Nathan’s mission is to use his skills to help
                                                     others achieve their dreams through a practical, scientific, and
                                                     integrative approach that addresses every human as a holistic
-                                                    stystem, not a machine of separate parts and pieces.
+                                                    system, not a machine of separate parts and pieces.
                                                 </p>
                                                 <div class="team_socail">
                                                     <h5>Get In Touch</h5>
@@ -718,8 +715,7 @@
                                         <div class="team_item team_skill">
                                             <div class="team_author">
                                                 <div class="port_img">
-                                                    <img class="coach-img"
-                                                        src="assets/images/taylor_img.jpg"
+                                                    <img class="coach-img" src="assets/images/taylor_img.jpg"
                                                         alt="taylor-baroth-headshot" />
                                                 </div>
                                                 <h4>Taylor Baroth, RN, HLC</h4>
