--- a/pages/service-holistic.html
+++ b/pages/service-holistic.html
@@ -115,13 +115,13 @@
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Customized nutrition program</li>
                                 <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Personalized excercise program</li>
+                                <li><i class="fa  fa-arrow-circle-right"></i> Personalized exercise program</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Daily accountability checklist</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Diet log</li>
                                 <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassissment</li>
+                                <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassessment</li>
                             </ul>
                         </div>
                         <div class="col-md-3">
@@ -133,8 +133,8 @@
                                     <br>
                                     <ul class="text-white">
                                         <li><i class="fas  fa-angle-right"></i> 12 Months: $150/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $175/month</li>
-                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $200/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 6 Months: $200/month</li>
+                                        <li><i class="fas  fa-angle-right"></i> 3 Months: $225/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
                                         <a href="../php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
