--- a/pages/service-consultation.html
+++ b/pages/service-consultation.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Optimal Evolution - Consultation</title>
+    <title>Optimal Evolution - Private Coaching Session</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
@@ -100,9 +100,6 @@
                         </div>
                         <div class="col-md-4">
                             <ul class="text-white">
-                                <br>
-                                <li><i class="fa  fa-arrow-circle-right"></i> Breakdown of diet and lifestyle
-                                    questionnaires</li>
                                 <br>
                                 <li><i class="fa  fa-arrow-circle-right"></i> Personalized diet recommendations</li>
                                 <br>
