--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
                                     </div>
                                     <div class="col-sm-8">
                                         <div class="home_text xs-m-top-30">
-                                            <h2 class="text-white">Revolutionized Health &</h2>
-                                            <h1 class="text-white">Performance Coaching</h1>
-                                            <h3 class="text-white">Sign up for a free consultation!</h3>
+                                            <h2 class="text-black">Revolutionized Health &</h2>
+                                            <h1 class="text-black">Performance Coaching</h1>
+                                            <h3 class="text-black">Sign up for a free consultation!</h3>
                                         </div>
                                         <div class="home_btns m-top-40">
                                             <a href="php/php_index.php" class="btn btn-primary m-top-20">Sign Me Up!</a>
-                                            <a href="#services" class="btn btn-default m-top-20">View Our Services</a>
+                                            <a href="#services" class="btn btn-default m-top-20 text-black">View Our
+                                                Services</a>
                                         </div>
                                     </div>
                                 </div>
